@@ -2,6 +2,7 @@ Revision history for STEVEB-Dist-Mgr
 
 0.04 UNREL
         - Added git_ignore()
+        - Added remove_unwanted_files()
 
 0.03    2020-12-22
         - Test release
